design - the signin, login page and 404 page

--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input::placeholder {
+  @apply text-sm;
+}
+
+.click{
+  transition: .1s;
+}
+.click:active{
+  scale: .98;
+}
