--- a/index.css
+++ b/index.css
@@ -6,9 +6,42 @@ input::placeholder {
   @apply text-sm;
 }
 
-.click{
-  transition: .1s;
+.click {
+  transition: 0.1s;
 }
-.click:active{
-  scale: .98;
+.click:active {
+  scale: 0.98;
+}
+@keyframes hideToTop {
+  0% {
+    height: 13rem;
+  }
+
+  100% {
+    height: 0;
+  }
+}
+@keyframes showToBottom {
+  100% {
+    height: 13rem;
+  }
+
+  0% {
+    height: 0;
+  }
+}
+
+
+@media(max-width :400px){
+
+.show {
+  animation:showToBottom .4s forwards;
+}
+
+
+.hide {
+  animation: hideToTop 0.2s forwards;
+}
+
+
 }
