--- a/index.css
+++ b/index.css
@@ -12,6 +12,16 @@ input::placeholder {
 .click:active {
   scale: 0.98;
 }
+
+
+.scroll-none::-webkit-scrollbar{
+display: none;
+}
+
+.animate-popup {
+  animation: popup 0.4s ease-in both;
+}
+
 @keyframes hideToTop {
   0% {
     height: 13rem;
@@ -21,6 +31,7 @@ input::placeholder {
     height: 0;
   }
 }
+
 @keyframes showToBottom {
   100% {
     height: 13rem;
@@ -31,17 +42,23 @@ input::placeholder {
   }
 }
 
-
-@media(max-width :400px){
-
-.show {
-  animation:showToBottom .4s forwards;
+@keyframes popup {
+  0% {
+    opacity: 0.3;
+    transform: translateX(-10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+  }
 }
 
+@media (max-width: 400px) {
+  .show {
+    animation: showToBottom 0.4s forwards;
+  }
 
-.hide {
-  animation: hideToTop 0.2s forwards;
-}
-
-
+  .hide {
+    animation: hideToTop 0.2s forwards;
+  }
 }
