--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ input::placeholder {
 }
 
 
+input[type="number"]::-webkit-inner-spin-button{
+ display: none; 
+}
+
 .scroll-none::-webkit-scrollbar{
 display: none;
 }
